force-app/main/default/objects/Cargo__c/fields/Type_Of_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Cargo__c</fullName>
    <label>Type Of Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Dry/Bulk</fullName>
            </value>
            <value>
                <fullName>Liquid/Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>