force-app/main/default/objects/Cargo__c/fields/units__c.field-meta.xml
<CustomField>
    <fullName>units__c</fullName>
    <label>units</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>ltr</fullName>
            </value>
            <value>
                <fullName>m/t</fullName>
            </value>
            <value>
                <fullName>unit</fullName>
            </value>
            <value>
                <fullName>tonns</fullName>
            </value>
            <value>
                <fullName>cub.meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>